--- a/Lab2.html
+++ b/Lab2.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>COSC 360</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   
   <body>
