--- a/Lab2.html
+++ b/Lab2.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>COSC 360</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
   </head>
   
   <body>
@@ -29,18 +29,18 @@
       </p>
       
       <figure>
-        <img src="images/images/eiskristalle-1938842_640.jpg" alt="Ice Crystals">
+        <img src="/images/eiskristalle-1938842_640.jpg" alt="Ice Crystals">
         <figcaption><i>Ice crystals on a branch</i></figcaption>
       </figure>    
       <table>
         <tbody>
           <tr>
             <td>Share: </td>
-            <td><img src="images/images/social/email_16.png" alt="Email this to someone"></td>
-            <td><img src="images/images/social/rss_16.png" alt="Syndicated content"></td>
-            <td><img src="images/images/social/twitter_16.png" alt="Share this on Twitter"></td>
-            <td><img src="images/images/social/facebook_16.png" alt="Share this on Facebook"></td>
-            <td><img src="images/images/social/flickr_16.png" alt="See this on Flickr"></td>
+            <td><img src="images/social/email_16.png" alt="Email this to someone"></td>
+            <td><img src="images/social/rss_16.png" alt="Syndicated content"></td>
+            <td><img src="images/social/twitter_16.png" alt="Share this on Twitter"></td>
+            <td><img src="images/social/facebook_16.png" alt="Share this on Facebook"></td>
+            <td><img src="images/social/flickr_16.png" alt="See this on Flickr"></td>
           </tr>
         </tbody>
        </table>
@@ -51,9 +51,9 @@
         <table>
           <tbody>
             <tr>
-              <td><a href="images/images/frost-490807_640.jpg"><img src="images/images/frost-490807_640.jpg" alt="Frost photo" height="100"></a></td>
-              <td><a href="images/images/ice-crystal-64157_640.jpg"><img src="images/images/ice-crystal-64157_640.jpg" alt="Ice Crystal photo" height="100"></a></td>
-              <td><a href="images/images/hoarfrost-639980_640.jpg"><img src="images/images/hoarfrost-639980_640.jpg" alt="Hoar Frost photo" height="100"></a></td>
+              <td><a href="images/frost-490807_640.jpg"><img src="images/images/frost-490807_640.jpg" alt="Frost photo" height="100"></a></td>
+              <td><a href="images/ice-crystal-64157_640.jpg"><img src="images/images/ice-crystal-64157_640.jpg" alt="Ice Crystal photo" height="100"></a></td>
+              <td><a href="images/hoarfrost-639980_640.jpg"><img src="images/images/hoarfrost-639980_640.jpg" alt="Hoar Frost photo" height="100"></a></td>
             </tr>
           </tbody>
         </table>
