--- a/Lab2.html
+++ b/Lab2.html
@@ -36,11 +36,11 @@
         <tbody>
           <tr>
             <td>Share: </td>
-            <td><img src="images/social/email_16.png" alt="Email this to someone"></td>
-            <td><img src="images/social/rss_16.png" alt="Syndicated content"></td>
-            <td><img src="images/social/twitter_16.png" alt="Share this on Twitter"></td>
-            <td><img src="images/social/facebook_16.png" alt="Share this on Facebook"></td>
-            <td><img src="images/social/flickr_16.png" alt="See this on Flickr"></td>
+            <td><img src="/images/social/email_16.png" alt="Email this to someone"></td>
+            <td><img src="/images/social/rss_16.png" alt="Syndicated content"></td>
+            <td><img src="/images/social/twitter_16.png" alt="Share this on Twitter"></td>
+            <td><img src="/images/social/facebook_16.png" alt="Share this on Facebook"></td>
+            <td><img src="/images/social/flickr_16.png" alt="See this on Flickr"></td>
           </tr>
         </tbody>
        </table>
@@ -51,9 +51,9 @@
         <table>
           <tbody>
             <tr>
-              <td><a href="images/frost-490807_640.jpg"><img src="images/images/frost-490807_640.jpg" alt="Frost photo" height="100"></a></td>
-              <td><a href="images/ice-crystal-64157_640.jpg"><img src="images/images/ice-crystal-64157_640.jpg" alt="Ice Crystal photo" height="100"></a></td>
-              <td><a href="images/hoarfrost-639980_640.jpg"><img src="images/images/hoarfrost-639980_640.jpg" alt="Hoar Frost photo" height="100"></a></td>
+              <td><a href="/images/frost-490807_640.jpg"><img src="images/images/frost-490807_640.jpg" alt="Frost photo" height="100"></a></td>
+              <td><a href="/images/ice-crystal-64157_640.jpg"><img src="images/images/ice-crystal-64157_640.jpg" alt="Ice Crystal photo" height="100"></a></td>
+              <td><a href="/images/hoarfrost-639980_640.jpg"><img src="images/images/hoarfrost-639980_640.jpg" alt="Hoar Frost photo" height="100"></a></td>
             </tr>
           </tbody>
         </table>
