--- a/Lab2.html
+++ b/Lab2.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>COSC 360</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/lab2.css">
   </head>
   
   <body>
