--- a/Lab2.html
+++ b/Lab2.html
@@ -13,12 +13,13 @@
     <header>
       <h1>COSC 360</h1>
       <h2>Lab 2 - CSS</h2>
-
-      <ul>
-        <li><a href="Lab2.html#desc">Descriptions</a></li>
-        <li><a href="Lab2.html#photos">Related Photos</a></li>
-        <li><a href="Lab2.html#rev">Reviews</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="Lab2.html#desc">Descriptions</a></li>
+          <li><a href="Lab2.html#photos">Related Photos</a></li>
+          <li><a href="Lab2.html#rev">Reviews</a></li>
+        </ul>
+      </nav> 
     </header>
     
     <div id="desc">
