--- a/Lab2.html
+++ b/Lab2.html
@@ -26,18 +26,18 @@
       <h3>Description</h3>
       <p>Photo by Myriams-Fotos</p>
       <p>This photo of ice crystals on a branch. The image if from
-        <a href="www.pixabay.com">Pixabay</a>
+        <a href="https://pixabay.com">Pixabay</a>
           was taken with a Canon EOS 650D camera
       </p>
       
-      <figure>
+      <figure class="MainImage>
         <img src="images/eiskristalle-1938842_640.jpg" alt="Ice Crystals">
         <figcaption><i>Ice crystals on a branch</i></figcaption>
       </figure>    
       <table>
         <tbody>
           <tr>
-            <td>Share: </td>
+            <td> <span class="second"> <img src="images/glyphicons-152-new-window.png" alt=""></span><span class="third">Share:</span></td>
             <td><img src="images/social/email_16.png" alt="Email this to someone"></td>
             <td><img src="images/social/rss_16.png" alt="Syndicated content"></td>
             <td><img src="images/social/twitter_16.png" alt="Share this on Twitter"></td>
