--- a/Lab2.html
+++ b/Lab2.html
@@ -30,7 +30,7 @@
           was taken with a Canon EOS 650D camera
       </p>
       
-      <figure class="MainImage>
+      <figure>
         <img src="images/eiskristalle-1938842_640.jpg" alt="Ice Crystals">
         <figcaption><i>Ice crystals on a branch</i></figcaption>
       </figure>    
