--- a/Lab2.html
+++ b/Lab2.html
@@ -24,7 +24,7 @@
     
     <div id="desc">
       <h3>Description</h3>
-      <p>Photo by Myriams-Fotos</p>
+      <byline>Photo by Myriams-Fotos</byline>
       <p>This photo of ice crystals on a branch. The image if from
         <a href="https://pixabay.com">Pixabay</a>
           was taken with a Canon EOS 650D camera
