--- a/Lab2.html
+++ b/Lab2.html
@@ -21,7 +21,7 @@
         </ul>
       </nav> 
     </header>
-    <div id="container">
+    <div class="container">
       <div id="desc">
         <h3>Description</h3>
         <hr>
