--- a/Lab2.html
+++ b/Lab2.html
@@ -25,7 +25,7 @@
       <div id="desc">
         <h3>Description</h3>
         <hr>
-        <byline>Photo by Myriams-Fotos</byline>
+        <p class="byline">Photo by Myriams-Fotos</p>
         <p>This photo of ice crystals on a branch. The image if from
           <a href="https://pixabay.com">Pixabay</a>
             was taken with a Canon EOS 650D camera
@@ -33,7 +33,7 @@
 
         <figure>
           <img src="images/eiskristalle-1938842_640.jpg" alt="Ice Crystals">
-          <figcaption><i>Ice crystals on a branch</i></figcaption>
+          <figcaption class="byline"><i>Ice crystals on a branch</i></figcaption>
         </figure>    
         <table>
           <tbody>
