--- a/Lab2.html
+++ b/Lab2.html
@@ -36,7 +36,7 @@
           <figcaption class="byline"><i>Ice crystals on a branch</i></figcaption>
         </figure>    
         <table>
-          <tbody>
+          <tbody class="gradient">
             <tr>
               <td> <span class="second"> <img src="images/glyphicons-152-new-window.png" alt=""></span><span class="third">Share:</span></td>
               <td><img src="images/social/email_16.png" alt="Email this to someone"></td>
