--- a/Lab2.html
+++ b/Lab2.html
@@ -34,9 +34,10 @@
         <figure>
           <img src="images/eiskristalle-1938842_640.jpg" alt="Ice Crystals">
           <figcaption class="byline"><i>Ice crystals on a branch</i></figcaption>
-        </figure>    
+        </figure>
+        <div class="gradient">
         <table>
-          <tbody class="gradient">
+          <tbody>
             <tr>
               <td> <span class="second"> <img src="images/glyphicons-152-new-window.png" alt=""></span><span class="third">Share:</span></td>
               <td><img src="images/social/email_16.png" alt="Email this to someone"></td>
@@ -44,9 +45,10 @@
               <td><img src="images/social/twitter_16.png" alt="Share this on Twitter"></td>
               <td><img src="images/social/facebook_16.png" alt="Share this on Facebook"></td>
               <td><img src="images/social/flickr_16.png" alt="See this on Flickr"></td>
-            </tr>
-          </tbody>
-         </table>
+           </tr>
+         </tbody>
+        </table>
+        </div>
       </div>
 
       <div id="photos">
